# Pinpoint_G4

./: .gitignore  proc_hepmc_through_g4.py
GenieOutput/: convert_gfaser_to_hepmc.py  test.ipynb
Pinpoint/: CMakeLists.txt  PinPoint.cc  setup.sh
Pinpoint/include/: AnalysisManager.hh  AnalysisManagerMessenger.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  DetectorParameters.hh  EventInformation.hh  PixelHit.hh  PixelSD.hh  PrimaryGeneratorMessenger.hh  RecoSpacePointSD.hh  RunActionMessenger.hh  TrackInformation.hh  TrackingAction.hh
Pinpoint/include/generators/: GENIEGenerator.hh  GPSGenerator.hh  GeneratorBase.hh  GeneratorVertexMetadata.hh
Pinpoint/include/reco/: Barcode.hh  Channel.hh
Pinpoint/macros/: gps.mac  vis.mac
Pinpoint/src/: ActionInitialization.cc  AnalysisManager.cc  AnalysisManagerMessenger.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  DetectorParameters.cc  EventAction.cc  EventInformation.cc  FPFParticle.cc  PixelHit.cc  PixelSD.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  TrackInformation.cc  TrackingAction.cc
Pinpoint/src/generators/: GENIEGenerator.cc  GENIEGeneratorMessenger.cc  GPSGenerator.cc  HepMCGenerator.cc
notebooks/: SCT-studies.ipynb  event_numbers.ipynb  genie_with_0.5mmSCT.ipynb  hits_analysis_on_my_baseline copy.ipynb  hits_analysis_on_taus.ipynb  initial_genie_studies_on_current_faserv.ipynb  initial_genie_studies_on_my_model.ipynb  max_hits_in_modules.ipynb  particle_utils.py  plot_all_evt_displays.py  pyhepmc_example.ipynb  test.ipynb
notebooks/old-notebooks/: hits_analysis_on_0.5mmSCT-WrongUnits.ipynb  hits_analysis_on_0.5mmSCT-oldNtupFormat.ipynb  hits_analysis_on_0.5mmSCT.ipynb
